# miniRT_42

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md  main.c  miniRT
rt_challenge/: CMakeLists.txt  Makefile  README.md  TODO.md  cannon.c  intersect.c  light.c  main.c  my_first_sphere.c  rays.c  result.txt  tuple_advanced.c  tuple_arith.c  tuple_basic.c  utils.c  wall.c
rt_challenge/cannon/: cannon.c
rt_challenge/include/: linux_keys.h  minirt.h  mlx_utils.h  objects.h  pattern.h  rays.h  raytracing.h  tuples.h  utils.h
rt_challenge/rt_files/: sample.rt
rt_challenge/srcs/: camera.c  color_at.c  intersect.c  light.c  lighting.c  main.c  my_first_sphere.c  objects.c  rays.c  scene1.c  shadows.c  simple_utils.c  view_transform.c  world.c
rt_challenge/srcs/bonus/: pattern.c
rt_challenge/srcs/minilibx/: init_rt.c  key_utils.c  keys.c  mlx_showimage.c  mouse.c  mouse_control.c  mouse_utils.c
rt_challenge/srcs/objects/: cone.c  cyl_utils.c  cylinder.c  objects.c  plane.c  sphere.c
rt_challenge/srcs/patterns/: checkers.c  gradient.c  mappings.c  normalmap.c  pattern.c  rings.c  stripes.c  uv_image.c  (+1 more)
rt_challenge/tests/: cannon.c  earth.c  leak_test.c  my_first_sphere.c  scene1.c
rt_challenge/tuples/: Makefile  color_operations.c  colors.c  tuple_advanced.c  tuple_arith.c  tuple_basic.c  tuples.h  utils.c
rt_challenge/utils/: Makefile  canvas.c  canvas_from_ppm.c  canvas_to_ppm.c  colors.c  matrix.c  matrix.h  matrix_invert.c  matrix_invert_utils.c  matrix_mult.c  transformation_matrices.c  tuple_advanced.c  tuple_basic.c  utils.c  utils.h
(+95 files in other folders)
